--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Hungry Hippo Recipes</title>
+    <title>Change Me!</title>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-131443471-2"></script>
+<!--
 		<script>
 			window.dataLayer = window.dataLayer || [];
 			function gtag(){dataLayer.push(arguments);}
@@ -52,6 +53,7 @@
     g.clearUserCookie=function(){};
 })(window,document,window['_fs_namespace'],'script','user');
 		</script>
+		-->
 
   </head>
 	<body>
